tests/negative/gold/interface1_test.gold
tests/negative/interface1_test.toit:8:8: error: Can't instantiate interface 'A'
  a := A
       ^
tests/negative/interface1_test.toit:9:8: error: Can't instantiate interface 'B'
  b := B
       ^
Compilation failed.
